--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,13 +72,13 @@
 <article>
     <section id="content" class="body">
 
-        <p><strong>Oliver Wiedemann</strong>
-Box 697
-78457 Konstanz
-Germany
-Tel: +49 (0) 7531 88-2220
-Mail: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#111;&#108;&#105;&#118;&#101;&#114;&#46;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#64;&#117;&#110;&#105;&#45;&#107;&#111;&#110;&#115;&#116;&#97;&#110;&#122;&#46;&#100;&#101;">&#111;&#108;&#105;&#118;&#101;&#114;&#46;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#64;&#117;&#110;&#105;&#45;&#107;&#111;&#110;&#115;&#116;&#97;&#110;&#122;&#46;&#100;&#101;</a>
-Private: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108;&#64;&#111;&#108;&#105;&#118;&#101;&#114;&#45;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#46;&#110;&#101;&#116;">&#109;&#97;&#105;&#108;&#64;&#111;&#108;&#105;&#118;&#101;&#114;&#45;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#46;&#110;&#101;&#116;</a></p>
+        <p><strong>Oliver Wiedemann</strong><br>
+Box 697<br>
+78457 Konstanz<br>
+Germany<br>
+Tel: +49 (0) 7531 88-2220<br>
+Mail: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#111;&#108;&#105;&#118;&#101;&#114;&#46;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#64;&#117;&#110;&#105;&#45;&#107;&#111;&#110;&#115;&#116;&#97;&#110;&#122;&#46;&#100;&#101;">&#111;&#108;&#105;&#118;&#101;&#114;&#46;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#64;&#117;&#110;&#105;&#45;&#107;&#111;&#110;&#115;&#116;&#97;&#110;&#122;&#46;&#100;&#101;</a><br>
+Private: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108;&#64;&#111;&#108;&#105;&#118;&#101;&#114;&#45;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#46;&#110;&#101;&#116;">&#109;&#97;&#105;&#108;&#64;&#111;&#108;&#105;&#118;&#101;&#114;&#45;&#119;&#105;&#101;&#100;&#101;&#109;&#97;&#110;&#110;&#46;&#110;&#101;&#116;</a>  </p>
 <p>Please use my PGP <a href="/static/oliver-wiedemann_EA11C344.asc">key</a>, also available on <a href="http://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x663E8E09EA11C344">pgp.mit.edu</a>.</p>
 <iframe width="430" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=9.168455600738527%2C47.684979053734764%2C9.204204082489015%2C47.69815163331136&amp;layer=mapnik&amp;marker=47.69156575942663%2C9.18632984161377" style="border: 1px solid black"></iframe>
 
