--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     <section id="content" class="body">
 
         <h2>Status</h2>
+<!-- <img style="width: 35%; object:fit contain" src="static/oliver_wiedemann.jpg" align="right" hspace="50" />
+-->
 
 <p>I'm a Ph.D. student at the <a href="http://mmsp-kn.de">Multimedia Signal Processing Group</a>, University of Konstanz, Germany.<br>
 I studied computer science at the University of Konstanz and the University of Limerick, Ireland.</p>
