--- a/pages/academic.html
+++ b/pages/academic.html
@@ -73,22 +73,22 @@
 <ul>
 <li><em>Foveated Video Coding for Real Time Streaming Applications</em>,<br>
     <u>O. Wiedemann</u>, V. Hosu, H. Lin and D. Saupe<br>
-    12th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2020. <a href="/static/publications/wiedemann2020foveated.pdf">PDF</a>  </li>
+    12th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2020. <a href="/static/publications/wiedemann2020foveated.pdf">PDF</a></li>
 <li><em>Disregarding the Big Picture: Towards Local Image Quality Assessment</em><br>
     <u>O. Wiedemann</u>, V. Hosu, H. Lin and  D. Saupe<br>
-    10th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2018. <a href="/static/publications/wiedemann2018disregarding.pdf">PDF</a>  </li>
+    10th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2018. <a href="/static/publications/wiedemann2018disregarding.pdf">PDF</a></li>
 <li><em>Saliency-Driven Image Coding Improves Overall Perceived JPEG Quality</em><br>
     V. Hosu, F. Hahn, <u>O. Wiedemann</u>, S. Jung and D. Saupe<br>
-    Picture Coding Symposium (PCS), IEEE, 2016. <a href="/static/publications/hosu2016saliency.pdf">PDF</a>  </li>
+    Picture Coding Symposium (PCS), IEEE, 2016. <a href="/static/publications/hosu2016saliency.pdf">PDF</a></li>
 </ul>
 <h4>Workshop Papers and Posters</h4>
 <ul>
 <li><em>Gaze Data for Quality Assessment of Foveated Video</em><br>
     <u>O. Wiedemann</u> and D. Saupe<br>
-    Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM) at ACM ETRA, Stuttgart, 2020. <a href="/static/publications/wiedemann2020gaze.pdf">PDF</a>  </li>
+    Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM) at ACM ETRA, Stuttgart, 2020. <a href="/static/publications/wiedemann2020gaze.pdf">PDF</a></li>
 <li><em>Predicted Local Quality as a Resource Allocation Scheme in Variable Image Compression</em><br>
     <u>O. Wiedemann</u>, V. Hosu, F. Götz-Hahn and D. Saupe<br>
-    1st International Conference on Quantification in Visual Computing, SFB-TRR 161, 2018. <a href="/static/publications/sfb-trr161-oliver-wiedemann.pdf">PDF</a>  </li>
+    1st International Conference on Quantification in Visual Computing, SFB-TRR 161, 2018. <a href="/static/publications/sfb-trr161-oliver-wiedemann.pdf">PDF</a></li>
 </ul>
 <h4>Talks and Presentations</h4>
 <ul>
@@ -97,23 +97,26 @@
 </ul>
 <h4>Theses</h4>
 <ul>
+<li><em>Foveated Video Coding for Real-Time Streaming Applications</em>,<br>
+    M.Sc. Thesis, University of Konstanz, 2020. <a href="/static/publications/msc_thesis_oliver_wiedemann.pdf">PDF</a></li>
 <li><em>Local No-Reference Image Quality Assessment Using Convolutional Neural Networks</em>,<br>
     B.Sc. Thesis, University of Konstanz, 2018. <a href="/static/publications/bsc_thesis_oliver_wiedemann.pdf">PDF</a></li>
 </ul>
 <h4>Teaching</h4>
 <ul>
-<li><em>Deep Learning Programming</em> - Tutorial, Summer Term 2018<ul>
+<li><em>Deep Learning Programming</em> - Tutorial, Summer Term 2018  <ul>
 <li>Theory of (convolutional) neural networks, optimization, data regularization and recurrent structures.</li>
 <li>Implementations using NumPy, TensorFlow and Keras.</li>
 </ul>
 </li>
-<li><em>Systems Programming</em> - Tutorial, Winter Term 2015<ul>
+<li><em>Systems Programming</em> - Tutorial, Winter Term 2015  <ul>
 <li>Intermediate to advanced C programming with a review of OS concepts in the Linux ecosystem.</li>
 </ul>
 </li>
 </ul>
 <h4>Miscellaneous</h4>
 <ul>
+<li>Doctoral Student Representative, Graduate School of the SFB-TRR 161, 2020/21.</li>
 <li>Organizing committee member of the <a href="https://www.mmsp.uni-konstanz.de/svcp-2019/overview/">5th Summer School on Video Compression and Processing</a>, Konstanz, 2019.</li>
 <li>Program committee member of the <a href="https://www.mmsp.uni-konstanz.de/et-mm/">Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM)</a>, colocated at ACM ETRA, Stuttgart, 2020.</li>
 </ul>
