update github link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <p class="social">
-                <a href="https://github.com/crxxn" target="_blank"><img
+                <a href="https://github.com/owdmn" target="_blank"><img
                         src="https://oliver-wiedemann.net/theme/images/icons/github.png"></a>
                 <a href="https://scholar.google.com/citations?user=dHo2JqEAAAAJ&hl=en" target="_blank"><img
                         src="https://oliver-wiedemann.net/theme/images/icons/googlescholar.png"></a>
