--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,7 +88,7 @@ Private: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108
 
 <script src="/particles.js"></script>
 <script>
-	particlesJS.load('pheader', '/particlesjs-config4.json');
+	particlesJS.load('pheader', '/particlesjs-config.json');
 </script
 
 </body>
