--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ I studied computer science at the University of Konstanz and the University of L
 
 <script src="/particles.js"></script>
 <script>
-	particlesJS.load('pheader', '/particlesjs-config4.json');
+	particlesJS.load('pheader', '/particlesjs-config.json');
 </script
 
 </body>
