--- a/pages/academic.html
+++ b/pages/academic.html
@@ -82,17 +82,14 @@
     V. Hosu, F. Hahn, <u>O. Wiedemann</u>, S. Jung and D. Saupe<br>
     Picture Coding Symposium (PCS), IEEE, 2016. <a href="/static/publications/hosu2016saliency.pdf">PDF</a></li>
 </ul>
-<h4>Workshop Papers and Posters</h4>
+<h4>Workshop Papers, Presetations and Posters</h4>
 <ul>
 <li><em>Gaze Data for Quality Assessment of Foveated Video</em><br>
     <u>O. Wiedemann</u> and D. Saupe<br>
-    Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM) at ACM ETRA, Stuttgart, 2020. <a href="/static/publications/wiedemann2020gaze.pdf">PDF</a></li>
+    Eye Tracking for Quality of Experience in Multimedia (ET-MM) at ACM ETRA, Stuttgart, 2020. <a href="/static/publications/wiedemann2020gaze.pdf">PDF</a></li>
 <li><em>Predicted Local Quality as a Resource Allocation Scheme in Variable Image Compression</em><br>
     <u>O. Wiedemann</u>, V. Hosu, F. Götz-Hahn and D. Saupe<br>
     1st International Conference on Quantification in Visual Computing, SFB-TRR 161, 2018. <a href="/static/publications/sfb-trr161-oliver-wiedemann.pdf">PDF</a></li>
-</ul>
-<h4>Talks and Presentations</h4>
-<ul>
 <li><em>Foveated Video Coding for Real Time Streaming Applications</em>,<br>
      5th Summer School on Video Compression and Processing (SVCP), Konstanz, 2019</li>
 </ul>
@@ -103,23 +100,33 @@
 <li><em>Local No-Reference Image Quality Assessment Using Convolutional Neural Networks</em>,<br>
     B.Sc. Thesis, University of Konstanz, 2018. <a href="/static/publications/bsc_thesis_oliver_wiedemann.pdf">PDF</a></li>
 </ul>
-<h4>Teaching</h4>
+<h4>Teaching Experience</h4>
 <ul>
-<li><em>Deep Learning Programming</em> - Tutorial, Summer Term 2018  <ul>
-<li>Theory of (convolutional) neural networks, optimization, data regularization and recurrent structures.</li>
-<li>Implementations using NumPy, TensorFlow and Keras.</li>
+<li><em>Operating Systems</em> - tutorial, winter term 2021/22 with <a href="https://www.mrupp.info/">Matthias Rupp</a><ul>
+<li>Concepts of modern operating systems.</li>
 </ul>
 </li>
-<li><em>Systems Programming</em> - Tutorial, Winter Term 2015  <ul>
-<li>Intermediate to advanced C programming with a review of OS concepts in the Linux ecosystem.</li>
+<li><em>Deep Learning Programming</em> - tutorial, winter term 2018/19 with <a href="https://www.researchgate.net/profile/Hanhe-Lin">Hanhe Lin</a> <ul>
+<li>(C)NNs, optimization, regularization and recurrency from theory to Tensorflow.</li>
+</ul>
+</li>
+<li><em>Systems Programming</em> - tutorial, winter term 2015/16 with <a href="https://stefan-klinger.de/">Stefan Klinger</a>  <ul>
+<li>Intermediate C programming in the Linux ecosystem.</li>
 </ul>
 </li>
 </ul>
-<h4>Miscellaneous</h4>
+<h4>Activities and Volunteering</h4>
 <ul>
 <li>Doctoral Student Representative, Graduate School of the SFB-TRR 161, 2020/21.</li>
-<li>Organizing committee member of the <a href="https://www.mmsp.uni-konstanz.de/svcp-2019/overview/">5th Summer School on Video Compression and Processing</a>, Konstanz, 2019.</li>
+<li>Member of the University Senate, 2020/21.</li>
+<li>Organizing committee member of the 5th SVCP, Konstanz, 2019.</li>
 <li>Program committee member of the <a href="https://www.mmsp.uni-konstanz.de/et-mm/">Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM)</a>, colocated at ACM ETRA, Stuttgart, 2020.</li>
+</ul>
+<h4>Events</h4>
+<ul>
+<li>GPN18: Gulaschprogrammiernacht, Karlsruhe, 2018</li>
+<li>Google TensorFlow Roadshow, Zürich, 2018</li>
+<li>33C3: Chaos Communication Congress, Hamburg, 2016</li>
 </ul>
     </section>
 </article>
