update pages, add content

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 
 
 
+        <div class="nav navfooter">
+            <a href="/pages/impressum.html">Impressum</a>,
+            <a href="/pages/datenschutz.html">Datenschutz</a>
+        </div>
+
 </aside>
 
 <!-- Content -->
@@ -75,11 +80,22 @@
 
 <p>I'm a Ph.D. student at the <a href="http://mmsp-kn.de">Multimedia Signal Processing Group</a>, University of Konstanz, Germany.<br>
 I studied computer science at the University of Konstanz and the University of Limerick, Ireland.</p>
-<p>My research interests are:  </p>
+<p>My research interests include:</p>
 <ul>
 <li>Adaptive image and video coding</li>
 <li>Machine learning</li>
+<li>Perceptual quality prediction for visual media</li>
 </ul>
+<h2>Projects</h2>
+<p>Currently only teaser images, proper pages are coming soon.</p>
+<h5>Cross-Resolution Quality Prediction</h5>
+<p><img src="/images/irnv2-1024-cropped.png" alt="crossres" width="40%"/></p>
+<h5>Foveated Video Coding for Real-Time Streaming Applications</h5>
+<p><img src="/images/video-foveated.jpg" alt="ffoveated" width="40%"/></p>
+<h5>Spatially Variable JPEG Compression</h5>
+<p><img src="/images/contours-crop.png" alt="vjpeg" width="40%"/></p>
+<h5>Local Image Quality Assessment</h5>
+<p><img src="/images/dragonfly-crop.png" alt="local iqa" width="40%"/></p>
     </section>
 </article>
 
