--- a/pages/academic.html
+++ b/pages/academic.html
@@ -63,6 +63,11 @@
 
 
 
+        <div class="nav navfooter">
+            <a href="/pages/impressum.html">Impressum</a>,
+            <a href="/pages/datenschutz.html">Datenschutz</a>
+        </div>
+
 </aside>
 
 <!-- Content -->
@@ -70,6 +75,15 @@
     <section id="content" class="body">
 
         <h2>Academic Work</h2>
+<h4>Preprints</h4>
+<ul>
+<li><em>KonX: Cross-Resolution Image Quality Assessment</em><br>
+    <u>O. Wiedemann</u>, V. Hosu, S. Su and D. Saupe<br>
+<a href="https://arxiv.org/abs/2212.05813">arXiv:2212.05813</a>, <a href="/static/publications/wiedemann2022konx.pdf">PDF mirror</a></li>
+<li><em>Going the Extra Mile in Face Image Quality Assessment: A Novel Database and Model</em><br>
+    S. Su, H. Lin, V. Hosu, <u>O. Wiedemann</u>, J. Sun, Y. Zhu, H. Liu, Y. Zhand and D. Saupe<br>
+<a href="https://arxiv.org/abs/2207.04904">arXiv:2207.04904</a>, <a href="/static/publications/su2022going.pdf">PDF mirror</a></li>
+</ul>
 <h4>Conference Papers</h4>
 <ul>
 <li><em>Foveated Video Coding for Real Time Streaming Applications</em>,<br>
@@ -84,6 +98,10 @@
 </ul>
 <h4>Workshop Papers, Presetations and Posters</h4>
 <ul>
+<li><em>Cross-Resolution Image Quality Assessment</em><br>
+    VQEG Meeting (NORM), Dec 13, 2022. <a href="/static/publications/slides/22-VQEG_NORM_235.pdf">Slides</a></li>
+<li><em>Methodologies for Large-Scale Crowdsourced Visual Quality Assessment</em> - invited talk 
+    NTNU Gjøvik / UC Berkeley Workshop on Data Collection for Subjective IQA, Dec 14, 2022. <a href="/static/publications/slides/22-NTNU-Workshop.pdf">Slides</a></li>
 <li><em>Gaze Data for Quality Assessment of Foveated Video</em><br>
     <u>O. Wiedemann</u> and D. Saupe<br>
     Eye Tracking for Quality of Experience in Multimedia (ET-MM) at ACM ETRA, Stuttgart, 2020. <a href="/static/publications/wiedemann2020gaze.pdf">PDF</a></li>
@@ -102,27 +120,20 @@
 </ul>
 <h4>Teaching Experience</h4>
 <ul>
-<li><em>Operating Systems</em> - tutorial, winter term 2021/22 with <a href="https://www.mrupp.info/">Matthias Rupp</a><ul>
-<li>Concepts of modern operating systems.</li>
+<li><em>Operating Systems</em> - winter term 2022/23 with <a href="https://heikohamann.de">Prof. Dr. Heiko Hamann</a></li>
+<li><em>Deep Learning for Computer Vision</em> - summer term 2022 with <a href="https://www.cvia.uni-konstanz.de/personen/prof-dr-bastian-goldluecke/">Prof. Dr. Bastian Goldlücke</a></li>
+<li><em>Operating Systems</em> - winter term 2021/22 with <a href="https://www.mrupp.info/">Dr. Matthias Rupp</a></li>
+<li><em>Deep Learning Programming</em> - winter term 2018/19 with <a href="https://www.researchgate.net/profile/Hanhe-Lin">Dr. Hanhe Lin</a> </li>
+<li><em>Systems Programming</em> - winter term 2015/16 with <a href="https://stefan-klinger.de/">Dr. Stefan Klinger</a>  </li>
 </ul>
-</li>
-<li><em>Deep Learning Programming</em> - tutorial, winter term 2018/19 with <a href="https://www.researchgate.net/profile/Hanhe-Lin">Hanhe Lin</a> <ul>
-<li>(C)NNs, optimization, regularization and recurrency from theory to Tensorflow.</li>
-</ul>
-</li>
-<li><em>Systems Programming</em> - tutorial, winter term 2015/16 with <a href="https://stefan-klinger.de/">Stefan Klinger</a>  <ul>
-<li>Intermediate C programming in the Linux ecosystem.</li>
-</ul>
-</li>
-</ul>
-<h4>Activities and Volunteering</h4>
+<h4>Misc. Activities</h4>
 <ul>
 <li>Doctoral Student Representative, Graduate School of the SFB-TRR 161, 2020/21.</li>
 <li>Member of the University Senate, 2020/21.</li>
 <li>Organizing committee member of the 5th SVCP, Konstanz, 2019.</li>
 <li>Program committee member of the <a href="https://www.mmsp.uni-konstanz.de/et-mm/">Workshop on Eye Tracking for Quality of Experience in Multimedia (ET-MM)</a>, colocated at ACM ETRA, Stuttgart, 2020.</li>
 </ul>
-<h4>Events</h4>
+<h4>Misc. Events</h4>
 <ul>
 <li>GPN18: Gulaschprogrammiernacht, Karlsruhe, 2018</li>
 <li>Google TensorFlow Roadshow, Zürich, 2018</li>
