--- a/pages/contact.html
+++ b/pages/contact.html
@@ -63,6 +63,11 @@
 
 
 
+        <div class="nav navfooter">
+            <a href="/pages/impressum.html">Impressum</a>,
+            <a href="/pages/datenschutz.html">Datenschutz</a>
+        </div>
+
 </aside>
 
 <!-- Content -->
