add linebreak in academic.html

--- a/pages/academic.html
+++ b/pages/academic.html
@@ -100,7 +100,7 @@
 <ul>
 <li><em>Cross-Resolution Image Quality Assessment</em><br>
     VQEG Meeting (NORM), Dec 13, 2022. <a href="/static/publications/slides/22-VQEG_NORM_235.pdf">Slides</a></li>
-<li><em>Methodologies for Large-Scale Crowdsourced Visual Quality Assessment</em> - invited talk 
+<li><em>Methodologies for Large-Scale Crowdsourced Visual Quality Assessment</em> - invited talk <br>
     NTNU Gjøvik / UC Berkeley Workshop on Data Collection for Subjective IQA, Dec 14, 2022. <a href="/static/publications/slides/22-NTNU-Workshop.pdf">Slides</a></li>
 <li><em>Gaze Data for Quality Assessment of Foveated Video</em><br>
     <u>O. Wiedemann</u> and D. Saupe<br>
