update academic and index.html

--- a/pages/academic.html
+++ b/pages/academic.html
@@ -79,10 +79,12 @@
 <ul>
 <li><em>KonX: Cross-Resolution Image Quality Assessment</em><br>
     <u>O. Wiedemann</u>, V. Hosu, S. Su and D. Saupe<br>
-<a href="https://arxiv.org/abs/2212.05813">arXiv:2212.05813</a>, <a href="/static/publications/wiedemann2022konx.pdf">PDF mirror</a></li>
+<a href="https://arxiv.org/abs/2212.05813">arXiv:2212.05813</a>, <a href="/static/publications/wiedemann2022konx.pdf">PDF mirror</a><br>
+<strong>accepted for publication in <a href="https://springer.com/journal/41233"><em>Quality and User Experience</em></a></strong></li>
 <li><em>Going the Extra Mile in Face Image Quality Assessment: A Novel Database and Model</em><br>
     S. Su, H. Lin, V. Hosu, <u>O. Wiedemann</u>, J. Sun, Y. Zhu, H. Liu, Y. Zhand and D. Saupe<br>
-<a href="https://arxiv.org/abs/2207.04904">arXiv:2207.04904</a>, <a href="/static/publications/su2022going.pdf">PDF mirror</a></li>
+<a href="https://arxiv.org/abs/2207.04904">arXiv:2207.04904</a>, <a href="/static/publications/su2022going.pdf">PDF mirror</a><br>
+<strong>accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><em>IEEE Transactions on Multimedia</em></a></strong></li>
 </ul>
 <h4>Conference Papers</h4>
 <ul>
@@ -120,6 +122,7 @@
 </ul>
 <h4>Teaching Experience</h4>
 <ul>
+<li><em>Image Analysis I: Image Processing</em> - summer term 2023 with <a href="https://www.cvia.uni-konstanz.de/personen/prof-dr-bastian-goldluecke/">Prof. Dr. Bastian Goldlücke</a></li>
 <li><em>Operating Systems</em> - winter term 2022/23 with <a href="https://heikohamann.de">Prof. Dr. Heiko Hamann</a></li>
 <li><em>Deep Learning for Computer Vision</em> - summer term 2022 with <a href="https://www.cvia.uni-konstanz.de/personen/prof-dr-bastian-goldluecke/">Prof. Dr. Bastian Goldlücke</a></li>
 <li><em>Operating Systems</em> - winter term 2021/22 with <a href="https://www.mrupp.info/">Dr. Matthias Rupp</a></li>
