--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 <!-- <img style="width: 35%; object:fit contain" src="static/oliver_wiedemann.jpg" align="right" hspace="50" />
 -->
 
-<p>I'm a Ph.D. student at the <a href="http://mmsp-kn.de">Multimedia Signal Processing Group</a>, University of Konstanz, Germany.<br>
-I studied computer science at the University of Konstanz and the University of Limerick, Ireland.</p>
+<p>I'm a Ph.D. student in the <a href="http://mmsp-kn.de">Multimedia Signal Processing Group</a>
+and a computer vision researcher in the <a href="https://www.limnologie.uni-konstanz.de/en/ag-becks/">Aquatic Ecology and Evolution Group</a>
+at the University of Konstanz, Germany. I studied computer science at the University of Konstanz and the University of Limerick, Ireland.</p>
 <p>My research interests include:</p>
 <ul>
 <li>Adaptive image and video coding</li>
