--- a/pages/academic.html
+++ b/pages/academic.html
@@ -88,6 +88,9 @@
 </ul>
 <h4>Conference Papers</h4>
 <ul>
+<li><em>Localization of Just Noticeable Difference for Image compression</em>,<br>
+    G. Chen, H. Lin <u>O. Wiedemann</u> and D.Saupe<br>
+    15th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2023 <a href="/static/publications/chen2023localization.pdf">PDF</a></li>
 <li><em>Foveated Video Coding for Real Time Streaming Applications</em>,<br>
     <u>O. Wiedemann</u>, V. Hosu, H. Lin and D. Saupe<br>
     12th International Conference on Quality of Multimedia Experience (QoMEX), IEEE, 2020. <a href="/static/publications/wiedemann2020foveated.pdf">PDF</a></li>
