update journal publications, add some thesis images

--- a/pages/academic.html
+++ b/pages/academic.html
@@ -75,16 +75,16 @@
     <section id="content" class="body">
 
         <h2>Academic Work</h2>
-<h4>Preprints</h4>
+<h4>Journal Papers</h4>
 <ul>
 <li><em>KonX: Cross-Resolution Image Quality Assessment</em><br>
     <u>O. Wiedemann</u>, V. Hosu, S. Su and D. Saupe<br>
-<a href="https://arxiv.org/abs/2212.05813">arXiv:2212.05813</a>, <a href="/static/publications/wiedemann2022konx.pdf">PDF mirror</a><br>
-<strong>accepted for publication in <a href="https://springer.com/journal/41233"><em>Quality and User Experience</em></a></strong></li>
+<a href="https://link.springer.com/article/10.1007/s41233-023-00061-8">Quality and User Experience 8 (1), 8</a>
+    <a href="https://arxiv.org/abs/2212.05813">arXiv:2212.05813</a>, <a href="/static/publications/wiedemann2022konx.pdf">PDF mirror</a>  </li>
 <li><em>Going the Extra Mile in Face Image Quality Assessment: A Novel Database and Model</em><br>
     S. Su, H. Lin, V. Hosu, <u>O. Wiedemann</u>, J. Sun, Y. Zhu, H. Liu, Y. Zhand and D. Saupe<br>
-<a href="https://arxiv.org/abs/2207.04904">arXiv:2207.04904</a>, <a href="/static/publications/su2022going.pdf">PDF mirror</a><br>
-<strong>accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046"><em>IEEE Transactions on Multimedia</em></a></strong></li>
+<a href="https://ieeexplore.ieee.org/document/10209208">IEEE Transactions on Multimedia, 2023</a>
+    <a href="https://arxiv.org/abs/2207.04904">arXiv:2207.04904</a>, <a href="/static/publications/su2022going.pdf">PDF mirror</a>  </li>
 </ul>
 <h4>Conference Papers</h4>
 <ul>
@@ -122,6 +122,10 @@
     M.Sc. Thesis, University of Konstanz, 2020. <a href="/static/publications/msc_thesis_oliver_wiedemann.pdf">PDF</a></li>
 <li><em>Local No-Reference Image Quality Assessment Using Convolutional Neural Networks</em>,<br>
     B.Sc. Thesis, University of Konstanz, 2018. <a href="/static/publications/bsc_thesis_oliver_wiedemann.pdf">PDF</a></li>
+</ul>
+<h4>Reviewing</h4>
+<ul>
+<li>ECCV 2024 Advances in Image Manipulation (AIM)</li>
 </ul>
 <h4>Teaching Experience</h4>
 <ul>
